--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -58,59 +58,65 @@
           %span.button.button-standard{ onclick: "$(this).parents('.modal').modal('hide');", style: "margin-right: 8px;" } Close
           = f.submit "Save", class: "button button-actionable"
 
-%div.single_pane{ style: "min-height: 600px;" }
-  %div.row{ style: "vertical-align: top; margin: 0 0 20px 0;"}
-    %div.span3{ style: "width: 160px; "}
-      %a.edit_caption_container.edit_path_settings_button{ style: "cursor: pointer;", title: "Click to edit" }
-        %div.path-caption{ style: "opacity: 0.75;width: 165px; height: inherit; margin-top: 90px; display: none; position: absolute; background-color: rgb(245, 245, 245); padding-left: 10px; color: black;" }
-          %span.caption-title{ style: "font-size:20px; line-height:24px;" } Edit
-        = image_tag(@path.path_pic, class: "bigheaderimage")
-    %div.span4{ style: "margin-left: 5px;" }
-      %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
-      %p#challenge_desc_pop.editable{ style: "font-size:15px;", title: "Click to edit" }= @path.description.empty? ? "Click here to add a description. (Optional)" : @path.description
-    %div.floatr{ style: "margin-top:10px;"}
-      - if @path.published? && @path.approved?
-        = link_to "View", challenge_path(@path.permalink), class: "button button-actionable"
-      - elsif @path.published?
-        = link_to "Waiting for Approval", "#", class: "button button-actionable disabled"
-      - else
-        = link_to "Publish", publish_path_path(@path.permalink), class: "button button-actionable", confirm: (@group ? "Once published, your challenge will be available to be added to your evaluations, though you can return here and edit it at any time." : "Your Challenge must be approved by an admin before it's published. It can take up to 24 hours for a Challenge to be approved.")
-      %span.button.button-standard.edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})"} Settings
-  %div
-    - unless @group
-      = link_to "New Section", new_section_path(:path_id => @path.id), class: "button button-standard", style: "float:right; display:inline;"
-      %h2{ style: "font-size: 20px; color: darkgray;" } QUESTIONS
-    %hr{ style: "margin: 5px 0 0 0;" }
-    :javascript
-      $(function(){ $(".section_questions_container").show() });
-    %table.table
-      - @sections.to_a.each_with_index do |s, i|
-        %tr
-          %td.section{ style: "border-bottom: 1px solid #EEE; border-top: 0px;" }
-            %section
-              .row{ style: (@group ? "" : "min-height: 75px;") }
-                - unless @group
-                  .floatr
-                    %ul.nav.nav-pills
-                      %li.active
-                        %a.edit_section_overview_pill{ onclick: "close_section_container(this);", style:"cursor:pointer;" } Overview
-                      %li
-                        %a#questions_pop.edit_section_questions_pill{ onclick: "display_section_questions($(this).parents('td.section'));", style:"cursor:pointer;" } Questions
-                      %li
-                        %a#section_settings_pop.edit_section_settings_pill{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});", style:"cursor:pointer;" } Settings
-                %div.span8
-                  - if @group
-                    %h3 Challenge questions
-                  - else
-                    %h3.section_editable{ style: "margin: 0px;", onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});" }= (i+1).to_s+". "+s.name
-                    %div
-                      %span.label{ style: "font-size: 12px; vertical-align:middle;" }
-                        %span#question_counter #{s.core_tasks.size} Core Questions
-                      %span.label{ style: "font-size: 12px; vertical-align:middle;" }
-                        %span#question_counter #{s.challenge_tasks.size} Challenge Questions
-                      %span.label{ style: "font-size: 12px; vertical-align:middle;" }
-                        %span#question_counter #{s.achievement_tasks.size} Achievements
-                      - unless s.published_at
-                        %span.label.warning{ style: "font-size: 12px; vertical-align:middle; background-color: #0069D6;" } draft
-              %div.section_questions_container.row{ style: "display:none; margin-top: 20px;" }
-                = render "sections/edit_tasks", { section: s, tasks: s.tasks, display_new_task_form: true }
+
+:css
+  body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
+  .aboutcontainer{ width: 900px; margin-top: 35px;}
+    
+#employer.aboutcontainer
+  .aboutbox{ style: "padding: 12px; "}
+    %div.row{ style: "vertical-align: top; margin: 0 0 20px 0;"}
+      %div.span3{ style: "width: 160px; margin-left: 0; "}
+        %a.edit_caption_container.edit_path_settings_button{ style: "cursor: pointer;", title: "Click to edit" }
+          %div.path-caption{ style: "opacity: 0.75;width: 165px; height: inherit; margin-top: 90px; display: none; position: absolute; background-color: rgb(245, 245, 245); padding-left: 10px; color: black;" }
+            %span.caption-title{ style: "font-size:20px; line-height:24px;" } Edit
+          = image_tag(@path.path_pic, class: "bigheaderimage")
+      %div.span4{ style: "margin-left: 5px;" }
+        %h1.editable{ style: "margin:0px;", title: "Click to edit" }= @path.name
+        %p#challenge_desc_pop.editable{ style: "font-size:15px;", title: "Click to edit" }= @path.description.empty? ? "Click here to add a description. (Optional)" : @path.description
+      %div.floatr{ style: "margin-top:10px;"}
+        - if @path.published? && @path.approved?
+          = link_to "View", challenge_path(@path.permalink), class: "button button-actionable"
+        - elsif @path.published?
+          = link_to "Waiting for Approval", "#", class: "button button-actionable disabled"
+        - else
+          = link_to "Publish", publish_path_path(@path.permalink), class: "button button-actionable", confirm: (@group ? "Once published, your challenge will be available to be added to your evaluations, though you can return here and edit it at any time." : "Your Challenge must be approved by an admin before it's published. It can take up to 24 hours for a Challenge to be approved.")
+        %span.button.button-standard.edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})"} Settings
+    %div
+      - unless @group
+        = link_to "New Section", new_section_path(:path_id => @path.id), class: "button button-standard", style: "float:right; display:inline;"
+        %h2{ style: "font-size: 20px; color: darkgray;" } QUESTIONS
+      %hr{ style: "margin: 5px 0 0 0;" }
+      :javascript
+        $(function(){ $(".section_questions_container").show() });
+      %table.table
+        - @sections.to_a.each_with_index do |s, i|
+          %tr
+            %td.section{ style: "border-bottom: 1px solid #EEE; border-top: 0px;" }
+              %section
+                .row{ style: (@group ? "" : "min-height: 75px;") }
+                  - unless @group
+                    .floatr
+                      %ul.nav.nav-pills
+                        %li.active
+                          %a.edit_section_overview_pill{ onclick: "close_section_container(this);", style:"cursor:pointer;" } Overview
+                        %li
+                          %a#questions_pop.edit_section_questions_pill{ onclick: "display_section_questions($(this).parents('td.section'));", style:"cursor:pointer;" } Questions
+                        %li
+                          %a#section_settings_pop.edit_section_settings_pill{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});", style:"cursor:pointer;" } Settings
+                  %div.span6{ style: "margin-left: 12px;"}
+                    - if @group
+                      %h3 Challenge questions
+                    - else
+                      %h3.section_editable{ style: "margin: 0px;", onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});" }= (i+1).to_s+". "+s.name
+                      %div
+                        %span.label{ style: "font-size: 12px; vertical-align:middle;" }
+                          %span#question_counter #{s.core_tasks.size} Core Questions
+                        %span.label{ style: "font-size: 12px; vertical-align:middle;" }
+                          %span#question_counter #{s.challenge_tasks.size} Challenge Questions
+                        %span.label{ style: "font-size: 12px; vertical-align:middle;" }
+                          %span#question_counter #{s.achievement_tasks.size} Achievements
+                        - unless s.published_at
+                          %span.label.warning{ style: "font-size: 12px; vertical-align:middle; background-color: #0069D6;" } draft
+                %div.section_questions_container.row{ style: "display:none; margin-top: 20px;" }
+                  = render "sections/edit_tasks", { section: s, tasks: s.tasks, display_new_task_form: true }
