--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -4,7 +4,39 @@
       %div.brand{ style: "padding-top: 3px; width: 150px;" }
         = link_to root_url do
           = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
-      - if current_user and show_nav_bar
+      - if current_user and show_nav_bar and current_user.employer?
+        %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25;" }
+          %li.navitem{ title: "Evaluations", style: "height: 100%; border-left: 1px solid #56698B;" }
+            = link_to group_evaluations_path(@group) do
+              = image_tag NAVBAR_EVALUATIONS,  alt: "Evaluations"
+              %span Evaluations
+          %li.navitem{ title: "Challenges", style: "height: 100%;" }
+            = link_to paths_group_path(@group) do
+              = image_tag NAVBAR_CHALLENGES, style: "", alt: "Challenges"
+              %span Challenges
+          - if current_user.earned_points > 1500 
+            %li.navitem{ title: "Account", style: "height: 100%;" }
+              = link_to dashboard_group_path(@group) do
+                = image_tag NAVBAR_ACCOUNT, style: "", alt: "Account"
+                %span Account
+          %li.navitem{ title: "API", style: "height: 100%;" }
+            = link_to sandbox_group_path(@group) do
+              = image_tag NAVBAR_API, alt: "API"  
+              %span API
+          %li.navitem{"data-target" => "#more_nav", "data-toggle" => "collapse", :role => "button", title: "Expand", style: "height: 100%;" }
+            = link_to "#" do
+              = image_tag NAVBAR_VERTICAL_DOTS, alt: "Expand" 
+          #more_nav.collapse
+            %div{ style: "width: 201px; height: 100%"}
+              %li.navitem{ title: "Explore", style: "float: left; height: 100%" }
+                %a.explore_link{ style: "display: block;" }
+                  = image_tag NAVBAR_EXPLORE, style: "", alt: "Explore"
+                  %span Explore
+              %li.navitem{ title: "Profile", style: "float: left; height: 100%;" }
+                = link_to profile_path(current_user.username), style: "display: block;" do
+                  = image_tag NAVBAR_PROFILE, alt: "Profile"  
+                  %span Profile
+      - elsif current_user and show_nav_bar
         %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25; border-right: 1px solid #56698B;" }
           %li.navitem{ title: "Home", style: "height: 100%; border-left: 1px solid #56698B;" }
             = link_to root_url do
@@ -16,13 +48,9 @@
               %span Explore
           - if current_user.earned_points > 1500 
             %li.navitem{ title: "Create", style: "height: 100%;" }
-              = link_to "/organization_portal" do
+              = link_to create_path do
                 = image_tag NAVBAR_CREATE, style: "", alt: "Create"
                 %span Create
-              / This is commented out so we can have an easy route to the Portal
-              / = link_to create_path do
-              /   = image_tag NAVBAR_CREATE, style: "", alt: "Create"
-              /   %span Create
           %li.navitem{ title: "Profile", style: "height: 100%;" }
             = link_to profile_path(current_user.username) do
               = image_tag NAVBAR_PROFILE, alt: "Profile"  
@@ -105,7 +133,7 @@
       - if current_user.nil? && show_sign_in
         %ul.nav.pull-right{ style: "float:right; margin-right: 197px; " }
           - unless current_user           
-            %li 
+            %li{ style: "margin-top: 4px;"} 
               = link_to "Employer? We can turbocharge your recruiting.", "/employers", class: "employers_link"
           %li
             %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; text-shadow:none; color:white;" } Sign in
