--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -137,18 +137,63 @@ code.content { border: none; color: #404040; display: block; padding: 10px; font
 .row .span11{margin-left:12px;}
 .container.body { margin-bottom:11px; border-radius:6px; width: 940px; padding: 15px; background-color: rgba(255, 255, 255, .3); border:none; box-shadow:none; }
 #content { padding-top: 42px; min-height: 450px;}
-.navitem span { color: white;text-shadow: 0 -1px 1px rgba(0,0,0,.75); margin-left: 7px;font-size: 14px;top: 3px;position: relative; }
-.navbar a { color: #BFBFBF; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
-.navbar .nav.pull-right li .employers_link { color: rgb(244, 252, 255); margin: 4px 15px 0 0; font-size: 14px; }
-.navbar .nav.pull-right li .employers_link:hover { text-decoration: underline; }
-.navbar .nav > li > a { padding: 6px 13px; text-decoration: none;}
-.navbar .nav.pull-right a:hover { color:white; }
-.navbar .nav.pull-right .leftboxfooter a {text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);}
-.nav.pull-right .caret{ border-top-color: #c7ced6; border-bottom-color: #c7ced6; color: #c7ced6; margin-top:7px; }
-.navbar .nav.pull-right a:hover .caret{border-top-color:white; border-bottom-color:white; color:white;}
+.navuser { margin-top: 4px; }
 .navuser>div>a>.caret{ border-top-width: 5px; border-right-width: 5px; border-left-width: 5px; margin-left:1px;}
 .navuser>div>a{ text-decoration:none; display: block;float: none;padding: 10px 10px;line-height: 19px;}
 .landingbuttontext{color:white; font-size:13px; display:inline-block; position:relative; left:5px; font-family:'MuliRegular', 'Helvetica', 'Arial'; font-weight: bold;}
+
+/*Navbar */
+
+.navbar {
+  a { color: #BFBFBF; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); }
+  
+  .nav {
+    li{
+      a {
+        padding: 6px 13px; 
+        text-decoration: none;
+      }
+    }
+    .navitem {
+      span {
+        color: white;
+        text-shadow: 0 -1px 1px rgba(0,0,0,.75); 
+        margin-left: 7px;
+        font-size: 14px;
+        top: 3px;
+        position: relative;
+      }
+    }
+    .pull-right {
+      a {
+        &:hover {
+          color: white;
+          .caret { border-top-color:white; border-bottom-color:white; color:white; }
+        }
+      }
+      li {
+        .employers_link {
+          color: rgb(244, 252, 255); 
+          margin: 4px 15px 0 0; 
+          font-size: 14px; 
+          
+          &:hover { text-decoration: underline; }
+        }
+      }
+      .caret {
+        border-top-color: #c7ced6; 
+        border-bottom-color: #c7ced6; 
+        color: #c7ced6; 
+        margin-top:7px; 
+      }
+      .leftboxfooter {
+        a {
+          text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+        }
+      }
+    }
+  }
+}
 
 
 /* Profile/Revolution */
