--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -28,11 +28,11 @@
             %tbody
               - @evaluations.to_a.each do |e|
                 %tr
-                  %td= e.title
-                  %td= take_group_evaluation_url(e.permalink)
-                  %td= e.evaluation_users.count
-                  %td= e.evaluation_users.order("evaluation_users.submitted_at ASC").last
-                  %td= link_to "Manage", group_evaluation_path(@group, e)
+                  %td= link_to e.title, group_evaluation_path(@group, e)
+                  %td= link_to take_group_evaluation_url(e.permalink), take_group_evaluation_url(e.permalink)
+                  %td= e.evaluation_enrollments.count
+                  %td= e.evaluation_enrollments.order("evaluation_enrollments.submitted_at ASC").last
+                  %td= link_to "Edit", edit_group_evaluation_path(@group, e)
               %tr
                 %td{ colspan: "5" }= link_to "Create a new evaluation", new_group_evaluation_path(@group)
       - unless @closed_evaluations.empty?
