First full run through of creation to submission.

--- a/app/views/evaluations/challenge.html.haml
+++ b/app/views/evaluations/challenge.html.haml
@@ -1,5 +1,7 @@
 %div.quizcontainer{ style: "margin-top: 70px;"}
-  = form_for(@task, url: answer_evaluation_path(@evaluation, @task.id), html: { id: "challenge_form", style: "margin: 0;" }) do |f|
+  = form_for(@task, url: took_task_url(@task), html: { id: "challenge_form", style: "margin: 0;" }) do |f|
+    = hidden_field_tag "draft_redirect_uri", continue_task_evaluation_url(@evaluation, @path, @task)
+    = hidden_field_tag "submit_redirect_uri", continue_evaluation_url(@evaluation, @path)
     %div.CRquizspace
       %div.quizheader
         = image_tag @path.path_pic, alt: "#{@path.name}"
@@ -12,6 +14,21 @@
       
       - if @task.text?
         = render "tasks/take_text", f: f
+        
+        %div.CRbuttonspace
+          = link_to "Skip Question", continue_evaluation_url(@group, @evaluation), class: "button button-standard", style: "float: left;"
+          
+          = f.submit "Submit", class: "button button-actionable", id: "submit_button", style: "float:right;"
+          = image_tag ICON_LOADING_URL, size: "25x25", style: "float: right; display: none; padding: 5px;", id: "loading_image", alt: "Loading"
+
+        :javascript
+          $("#preview_button").click(function(){
+            $("input[name=mode]").val("preview");
+          });
+
+          $("#draft_button").click(function(){
+            $("input[name=mode]").val("draft");
+          });
       - else
         - if @task.image?
           = render "tasks/take_image", f: f
