--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -67,16 +67,19 @@
           = image_tag LIGHT_BULB_URL, style: "height: 15px; display: inline;"
           %p Each Challenge should take you about 10 minutes.
           .challenge_holder
+            - evaluation_completed = true
             - @evaluation.paths.each do |p|
             - @enrollment = current_user ? current_user.enrolled?(p) : nil
               .challenge_card
                 = image_tag p.picture
                 %h5= p.name
-                / Why is total points set so high?
-                - if @enrollment and @enrollment.total_points > 1000
-                  %div Completed
-                - else
-                  = link_to "Begin Now", continue_evaluation_path(@evaluation.id, p.id), class: "button button-small button-actionable"
+                - if current_user
+                  - status = @evaluation.user_status(current_user, p)
+                  - if status == :start or status == :continue
+                    - evaluation_completed = false
+                    = link_to status.to_s.humanize, continue_evaluation_path(@evaluation.id, p.id), class: "button button-small button-actionable"
+                  - else
+                    %div Completed
       .step
         .img-circle
           %span 4
@@ -84,8 +87,9 @@
           %h4 Submit Application
           = image_tag LIGHT_BULB_URL, style: "height: 15px; display: inline;"
           %p Once all previous steps are completed, you'll be able to submit your application.
-          %div{ style: "text-align: center; margin-top: 12px; "}
-            = link_to "Submit", take_confirmation_group_evaluation_path(@group, @evaluation), class: "button button-large button-actionable disabled", style: "margin: 10px; float: left;", disabled: "disabled"
+          - if evaluation_completed
+            %div{ style: "text-align: center; margin-top: 12px; "}
+              = link_to "Submit", submit_group_evaluation_path(@group, @evaluation), class: "button button-large button-actionable", style: "margin: 10px; float: left;"
         
     
 :javascript
