--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -10,7 +10,6 @@
       %span Evaluations Overview
       %hr
     .body
-      %h2 Open Evaluations
       .evaluations.green
         - if @open_evaluations.empty?
           %p 
@@ -31,7 +30,10 @@
                   %td= link_to e.title, group_evaluation_path(@group, e)
                   %td= link_to take_group_evaluation_url(e.permalink), take_group_evaluation_url(e.permalink)
                   %td= e.evaluation_enrollments.count
-                  %td= e.evaluation_enrollments.order("evaluation_enrollments.submitted_at ASC").last
+                  %td
+                    - last_enrollment = e.evaluation_enrollments.order("evaluation_enrollments.submitted_at ASC").last
+                    - if last_enrollment and last_enrollment.submitted_at
+                      = time_ago_in_words(last_enrollment.submitted_at) + " ago"
                   %td= link_to "Edit", edit_group_evaluation_path(@group, e)
               %tr
                 %td{ colspan: "5" }= link_to "Create a new evaluation", new_group_evaluation_path(@group)
