--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -34,7 +34,7 @@
                   %td= e.evaluation_users.order("evaluation_users.submitted_at ASC").last
                   %td= link_to "Manage", group_evaluation_path(@group, e)
               %tr
-                %td{ colspan: "5" }= link_to "Create a new evaluation", new_group_evaluation_path(@group)
+                %td{ colspan: "5" }= link_to "Create a new evaluation", new_group_evaluation_path(@group), style: "font-weight: bold;"
       - unless @closed_evaluations.empty?
         %h2{ style: "margin-top: 30px; "} Closed Evaluations
         .evaluations.orange
