--- a/app/views/groups/_header.html.haml
+++ b/app/views/groups/_header.html.haml
@@ -1,8 +1,4 @@
-.header{ style: "border-bottom: 1px solid #DDD;" }
+.header
   .title
-    = image_tag STONEY_SMALL_URL, style: "height: 115px; display: inline; vertical-align: middle", alt: "Stoney"
-    %span{ style: "font-size: 40px;position: relative;top:13px;" } #{@group.name} Account
-  
-  .btn-group{ style: "text-align: right;" }
-    = link_to "Page",  group_path(@group), class: "btn"
-    = link_to "Settings",  edit_group_path(@group), class: "btn"
+    = image_tag STONEY_SMALL_URL, style: "height: 100px; display: inline; vertical-align: middle", alt: "Stoney"
+    %span{ style: "font-size: 40px; position: relative;top:13px;" } #{@group.name} Account
