--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -555,7 +555,7 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; margin-bottom: 15px;}
     width: 400px; 
     margin: 5px auto; 
     
-    h5 { display: inline-block; width: 370px; }
+    h5 { display: inline-block; width: 370px; font-size: 13px;}
     img { position:relative; bottom:2px; display: inline-block; height: 18px; width: 18px; }
   }
   
@@ -1029,11 +1029,14 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
  
  h3 {
   margin-bottom: 0;  
+  font-size: 25px;
  }
  
  .tips {
    margin: 0 auto 20px;
  }
+ .button-xlarge { font-size: 22px;}
+ 
  .evaluation_info{
    border: 4px solid $employer_green;
    background: $employer_green_light;
@@ -1069,7 +1072,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
  }
  .challenge_chooser {
    display: inline-block;
-   width: 62%; 
+   width: 40%; 
    margin:0 20px; 
    vertical-align: top;
    border: 1px solid rgb(172, 172, 172);
