--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -16,7 +16,7 @@
           %p #{@evaluation.company} is using MetaBright to measure their job candidates' skills. MetaBright gives you the chance to prove and showcase what you know!
     %h2 Apply to this job
     .application_steps
-      .step{ style: "margin-top: 0; ", class: ("opaque" if current_user)}
+      .step{ style: "margin-top: 0; "}
         .img-circle
           %span 1
         .instructions
