--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -1,15 +1,16 @@
 :css
   body{ background-image: url("https://s3.amazonaws.com/moonlite-nsdub/static/Backgrounds/gplaypattern.png"); background-repeat: repeat; background-size: auto; }
-  .aboutcontainer{ width: 950px; background-color:rgba(36, 72, 109, 0.8);}
+  .aboutbox{ border-radius: 0; }
+  .aboutcontainer{ width: 950px; background-color:rgba(36, 72, 109, 0.8); margin-top: 25px; border-radius: 0;  }
 
 
 #evaluation_manager.aboutcontainer
-  %div.aboutbox{ style: "background-color: white; border-radius: 4px; padding:8px;" }
+  %div.aboutbox{ style: "background-color: white; padding:8px;" }
     %div{ style: "padding: 15px 15px 0 15px;"}
-      = image_tag GIANT_STONEY, style:"display:inline; height:85px;", alt: "Stoney"
+      = image_tag GIANT_STONEY, style:"display:inline; height:61px;", alt: "Stoney"
       %div{ style: "display: inline-block; vertical-align: top; margin-left: 5px; "}
-        %h1{ style: "font-size: 46px;position: relative;top:5px;" } Evaluation Manager
-        %h3{ style: "margin-top: 5px; "}= @evaluation.title
+        %h2{ style: "font-size: 30px; margin-bottom: -10px; margin-top: -3px; " } Evaluation Overview
+        %h3{ style: "font-size:20px; "}= @evaluation.title
     %div{ style: "margin-bottom: 8px; text-align: right; margin-top: -15px;"}
       = link_to "Edit", edit_group_evaluation_path(@group, @evaluation), class: "button button-actionable button-small"
       = link_to "Back", group_evaluations_path(@group), class: "button button-info button-small"
@@ -24,16 +25,15 @@
             - @paths.each do |p|
               %th= p.name
             %th Date Submitted
-            %th
         %tbody
           - @evaluations.each do |e|
             %tr
-              %td= e.name
+              %td
+                = link_to "#{e.name}", grade_group_evaluation_url(@group, @evaluation, u: e.user_id)
               %td= e.email
               - @paths.each do |p|
                 %td= e["e#{p.id}_metapercentile"]
-              %td= time_ago_in_words(e.submitted_at)
-              %td= link_to "View Results", grade_group_evaluation_url(@group, @evaluation, u: e.user_id)
+              %td #{time_ago_in_words(e.submitted_at)} ago
           - if @evaluations.empty?
             %tr
               %td{ colspan: 4 } No one has taken this evaluation yet.
