--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -36,7 +36,7 @@
               = link_to "/auth/github", style: "display: inline-block; margin-left: 10px;", class: "button btn" do
                 = image_tag ICON_LOGIN_GITHUB, alt: "GitHub sign up"
                 %span.landingbuttontext GitHub sign up »
-      .step{ class: ("opaque" if current_user.country && current_user.state && current_user.city) }
+      .step
         .img-circle
           %span 2
         .instructions
@@ -72,7 +72,7 @@
             - @enrollment = current_user ? current_user.enrolled?(p) : nil
               .challenge_card
                 = image_tag p.picture
-                %h5= p.name
+                %h5= truncate(p.name, length: 22, separator: ' ')
                 - if current_user
                   - status = @evaluation.user_status(current_user, p)
                   - if status == :start or status == :continue
