--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -29,13 +29,12 @@
             %tbody
               - @evaluations.to_a.reverse.each do |e|
                 %tr
-                  %td= link_to e.title, group_evaluation_path(@group, e)
-                  %td= take_group_evaluation_url(e.permalink)
-                  %td= e.evaluation_enrollments.count.to_s + " users"
-                  %td
-                    - last_enrollment = e.evaluation_enrollments.order("evaluation_enrollments.submitted_at ASC").last
-                    - if last_enrollment and last_enrollment.submitted_at
-                      = "Last submission " + time_ago_in_words(last_enrollment.submitted_at) + " ago"
+                  %td{ style: "width: 25%; overflow: hidden" }= link_to e.title, group_evaluation_path(@group, e)
+                  %td{ style: "width: 25%; overflow: hidden" }
+                    - e.paths.each do |path|
+                      %img{ src: path.picture, style: "width: 25px; height: 25px;" }
+                  %td{ style: "width: 25%; overflow: hidden" }= take_group_evaluation_url(e.permalink)
+                  %td{ style: "width: 10%; overflow: hidden" }= e.evaluation_enrollments.count.to_s + " users"
                   %td{ style: "padding: 15px 5px; width: 20px;"}
                     = link_to edit_group_evaluation_path(@group, e) do
                       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/gear_dark_small.png", style: "opacity: .8; height:20px; width:20px;", title:"Settings", alt: "Settings"}
